--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -185,7 +185,8 @@
     </div>
 </footer>
 
-
+{% block extra_scripts %}
+{% endblock %}
 {% if h_ga %}
     <script>
         (function (i, s, o, g, r, a, m) {
