--- a/organizers/templates/invite_list.html
+++ b/organizers/templates/invite_list.html
@@ -1,9 +1,9 @@
 {% extends "base_table.html" %}
 
-{% block head_title %}Invite applications {% endblock %}
+{% block head_title %}Invite {% if teams %}teams{% else %}applications{% endif %} {% endblock %}
 
 
-{% block table_title %}Invite applications{% endblock %}
+{% block table_title %}Invite {% if teams %}teams{% else %}applications{% endif %}{% endblock %}
 
 
 {% block table_footer %}
@@ -11,5 +11,11 @@
         <button name="invite" class="btn btn-success btn-block"
                 value="invite">Invite
         </button>
+        {% if teams %}
+            <a href="{% url 'invite_list' %}" class="btn btn-default btn-block">View applications</a>
+        {% else %}
+            <a href="{% url 'invite_teams_list' %}" class="btn btn-default btn-block">Group by teams</a>
+        {% endif %}
+
     </div>
 {% endblock %}
