add color to symbols in team view

--- a/teams/templates/team.html
+++ b/teams/templates/team.html
@@ -26,7 +26,7 @@
                     <tr>
                         <td>{{ hacker.name }} </td>
                         <td>{{ hacker.email }} </td>
-                        <td><i class="fa {% if hacker.app %}fa-check{% else %}fa-times{% endif %}"
+                        <td><i class="fa {% if hacker.app %}fa-check text-success{% else %}fa-times text-danger{% endif %}"
                                aria-hidden="true"></i>
                         </td>
                     </tr>
