update button style

--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -136,8 +136,8 @@
 
         .button-td:hover,
         .button-a:hover {
-            background: #555555 !important;
-            border-color: #555555 !important;
+            background: #32d88e !important;
+            border-color: #32d88e !important;
         }
 
         /* Media Queries */
