--- a/organizers/templates/application_detail.html
+++ b/organizers/templates/application_detail.html
@@ -30,7 +30,7 @@
                     {% include 'include/field.html' with desc='Status' value=app.get_status_display %}
                     {% include 'include/field.html' with desc='Email' value=app.user.email %}
                     {% include 'include/field.html' with desc='Travel reimbursement?' value=app.reimb|yesno:'Yes,No,Maybe' %}
-                    {% include 'include/field.html' with desc='Money assigned' value=reimbursment.reimb_amount %}
+                    {% include 'include/field.html' with desc='Money needed' value=app.reimb_amount %}
                 {% endif %}
                 {% include 'include/field.html' with desc='Under age (-18)' value=app.under_age|yesno:'Yes,No,Maybe' %}
                 {% if app.resume %}
