--- a/reimbursement/templates/mails/reimbursement_message.html
+++ b/reimbursement/templates/mails/reimbursement_message.html
@@ -2,15 +2,21 @@
 {% block preheader %}Travel reimbursement award for {{ h_name }}{% endblock %}
 
 {% block content %}
-<p>    Congrats {{ app.user.get_full_name }}, you have been granted travel reimbursement for this edition of {{ h_name }}. We will
-    reimburse you <b>{{ reimb.assigned_money }}{{ h_currency }}</b> as you are coming from {{ reimb.origin }}.
-    <b>You have {{ h_r_days }} days to submit a receipt of your tickets.</b>
-</p>
+    <p> Congrats {{ app.user.get_full_name }}, you have been granted travel reimbursement for this edition
+        of {{ h_name }}. We will
+        reimburse you <b>{{ reimb.assigned_money|floatformat:2 }}{{ h_currency }}</b> as you are coming
+        from {{ reimb.origin }}.
+        <b>You have {{ h_r_days }} days to submit a receipt of your tickets.</b>
+    </p>
     {% include 'mails/include/email_button.html' with text='Submit receipt' url=form_url %}
     {% include 'mails/include/confirm_reimbursement.html' %}
     <p>
-    If you need an invite letter for your visa, answer this email with your full name, university name and passport number,
-    as shown in your passport.
+        Before doing any travel arrangement please read our travel guide.
+    </p>
+    {% include 'mails/include/email_button.html' with text='Travel guide' url='https://pages.hackcu.org/policies/travel/' %}
+    <p>
+        If you need an invite letter for your visa, answer this email with your full name, university name and
+        passport number, as shown in your passport.
     </p>
     {% include 'mails/include/closing.html' %}
 {% endblock %}
