--- a/stats/templates/application_stats.html
+++ b/stats/templates/application_stats.html
@@ -14,6 +14,7 @@
         <div class="col-md-6">
             <h3>Status</h3>
             <div id="applications_stats"></div>
+            <p><b>Application count:</b> <span id="app_count"></span></p>
         </div>
         <div class="col-md-6">
             <h3>Gender</h3>
@@ -44,7 +45,7 @@
             <div id="diet_stats_confirmed"></div>
         </div>
         <div class="col-md-12">
-            <p><b>Other diet requirements</b> <span id="other_diet"></span></p>
+            <p><b>Confirmed extra diet requirements:</b><br> <span id="other_diet"></span></p>
         </div>
 
     </div>
@@ -190,6 +191,7 @@
             });
             $('#other_diet').html(data['other_diet']);
             $('#update_date').html(data['update_time']);
+            $('#app_count').html(data['app_count']);
         })
         ;
 
