--- a/reimbursement/templates/mails/reject_receipt_message.html
+++ b/reimbursement/templates/mails/reject_receipt_message.html
@@ -10,7 +10,7 @@
     {% include 'mails/include/email_button.html' with text='Submit receipt' url=form_url %}
     <p>
         Please submit a valid receipt to be reimbursed. I have extended the deadline so you can submit a valid receipt.
-        You have {{ h_r_days }} to submit a valid receipt.
+        You have {{ h_r_days }} more days to submit a valid receipt.
     </p>
     {% include 'mails/include/confirm_reimbursement.html' %}
 
