--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -86,7 +86,7 @@
                 return needs_reimb.prop("checked");
             });
             $('#id_reimb').parent().addClass('required');
-
+            reimb_amout.parent().addClass('required');
 
             var is_firsttime = $('input[name="first_timer"][value="True"]');
             var experienced = $('input[name="first_timer"][value="False"]');
