add no reimbursement email option

--- a/reimbursement/templates/reimbursement_send_table.html
+++ b/reimbursement/templates/reimbursement_send_table.html
@@ -7,5 +7,8 @@
         <button name="invite" class="btn btn-success btn-block"
                 value="invite">Send reimbursement
         </button>
+        <button name="no_reimb" class="btn btn-danger btn-block"
+                value="no_reimb">Send no reimbursement
+        </button>
     </div>
 {% endblock %}
