Rewording for the no reimbursement message

--- a/app/templates/mails/include/closing.html
+++ b/app/templates/mails/include/closing.html
@@ -14,6 +14,6 @@
         .
     {% endif %}
 </p>
-<p>See you soon!</p>
+<p>We hope to see you at {{ h_name }}!</p>
 <p>Best,</p>
 <p>{{ h_name }} Team</p>
