--- a/reimbursement/templates/mails/no_reimbursement_message.html
+++ b/reimbursement/templates/mails/no_reimbursement_message.html
@@ -3,11 +3,10 @@
 
 {% block content %}
     <p> Dear {{ app.user.get_full_name }},</p>
-    <p>Unfortunately, we can't extend you travel reimbursement for this edition of {{ h_name }}. We hope you can still
-        make it.</p>
-    <p>Remember to <a href="{{ confirm_url }}">confirm</a> if you are still coming. If you can't afford to come, please
-        let us know by canceling the invite <a href="{{ cancel_url }}">here</a>.
-
+    <p>Unfortunately, we aren’t able to offer you travel reimbursement for this edition of {{ h_name }}.
+        We still hope you can join us at {{ h_name }}!</p>
+    <p>Please remember to <a href="{{ confirm_url }}">confirm</a> your spot if you will be joining us. If your plans
+        have changed, please let us know by cancelling your invite <a href="{{ cancel_url }}">here</a>.
     </p>
     <p>
         If you need an invite letter for your visa, answer this email with your full name, university name and passport
