--- a/organizers/templates/include/field.html
+++ b/organizers/templates/include/field.html
@@ -1,4 +1,4 @@
 {% if value %}
-    <dt>{{ desc }} {% if showlength %} ({{ desc | length}}) {% endif %}</dt>
+    <dt>{{ desc }} {% if showlength %} ({{ value | length}}) {% endif %}</dt>
     <dd>{{ value }}</dd>
 {% endif %}
