--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -151,9 +151,14 @@
                 <p>Have a question? We're here for you! {{ h_contact_email | urlize }}</p>
             </div>
             <div class="social-icons col-sm-6 text-right text-center-xs">
-                {% if h_tw %}
-                    <a class="btns" target="_blank" href="https://twitter.com/{{ h_tw }}">
-                        <i aria-hidden="true" class="fa fa-twitter fa-lg"></i>
+                {% if h_me %}
+                    <a class="btns" target="_blank" href="https://medium.com/@{{ h_me }}">
+                        <i aria-hidden="true" class="fa fa-twitter fa-medium"></i>
+                    </a>
+                {% endif %}
+                {% if h_repo %}
+                    <a class="btns" target="_blank" href="{{ h_repo }}">
+                        <i aria-hidden="true" class="fa fa-github fa-lg"></i>
                     </a>
                 {% endif %}
                 {% if h_fb %}
@@ -161,24 +166,21 @@
                         <i aria-hidden="true" class="fa fa-facebook fa-lg"></i>
                     </a>
                 {% endif %}
+                {% if h_tw %}
+                    <a class="btns" target="_blank" href="https://twitter.com/{{ h_tw }}">
+                        <i aria-hidden="true" class="fa fa-twitter fa-lg"></i>
+                    </a>
+                {% endif %}
                 {% if h_contact_email %}
                     <a class="btns" target="_blank" href="mailto:{{ h_contact_email }}">
                         <i aria-hidden="true" class="fa fa-envelope-o fa-lg"></i>
                     </a>
                 {% endif %}
-
-                {% if h_repo %}
-                    <a class="btns" target="_blank" href="{{ h_repo }}">
-                        <i aria-hidden="true" class="fa fa-github fa-lg"></i>
-                    </a>
-                {% endif %}
-
-
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-                <small>Made with <i class="fa fa-heart" aria-hidden="true"></i> by {{ h_name }} </small>
+                <small>Made with <i class="fa fa-laptop" aria-hidden="true"></i> and <i class="fa fa-heart" aria-hidden="true"></i> by {{ h_name }} </small>
                 {# OH NO YOU FOUND ME! This is just an internal joke that appeared at the first edition of HackUPC. #}
                 {# You can remove it, but if you dont care, please keep it. I'm a sentimental - Gerard Casas contact@gerard.space #}
                 <span style="display: none">BIENE {{ h_name }}</span>
