--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -15,6 +15,10 @@ body {
     margin-bottom: 105px;
 }
 
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  margin-top: 0;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
@@ -90,6 +94,10 @@ footer a, footer a:focus, footer a:active {
 
 footer a:hover {
     color: #aa002d;
+}
+
+.panel-body {
+    padding: 2em;
 }
 
 .social-icons > a {
