--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,8 +1,16 @@
+@font-face {
+    font-family: ProximaNovaRegular;
+    src: url(../fonts/ProximaNovaRegular.ttf);
+}
+
 body {
-    background: linear-gradient(#26ADB5 0%, #1DA3AD 33%, #1597A3 67%, #0E8C99 100%) no-repeat center center fixed;
-    background-size: cover;
-    font-family: 'Roboto', Helvetica, sans-serif;
+    background-image: url("../img/background.png");
+    background-position: center top;
+    /*background: linear-gradient(#26ADB5 0%, #1DA3AD 33%, #1597A3 67%, #0E8C99 100%) no-repeat center center fixed;
+    background-size: cover;*/
+    font-family: ProximaNovaRegular, 'Roboto', sans-serif;
     font-size: 15px;
+    color: #202326;
 }
 
 html {
@@ -17,6 +25,25 @@ body {
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-top: 0;
+}
+
+a {
+    color: #E22B57;
+    text-decoration: none;
+    -webkit-transition: all .1s linear;
+    -moz-transition: all .1s linear;
+    -o-transition: all .1s linear;
+    transition: all .1s linear;
+}
+
+a:hover, a:active, a:focus {
+    color: #aa002d;
+    text-decoration: none;
+}
+
+.navbar-header img {
+    height: 100%;
+    padding: 0;
 }
 
 .footer {
@@ -43,15 +70,16 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     -moz-border-radius: 0;
     border-radius: 0;
     border: 0;
+    border-radius: 4px;
     /*
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
     overflow-y: hidden;
-    font-size: 17px;
+    font-size: 17px;*/
     -webkit-transition: all .1s linear;
     -moz-transition: all .1s linear;
     -o-transition: all .1s linear;
     transition: all .1s linear;
-    padding-left: 20px;
+    /*padding-left: 20px;
     padding-right: 20px;*/
 }
 
@@ -75,25 +103,9 @@ footer p, footer small {
     color: #777;
 }
 
-footer p > a {
-    color: #E22B57;
-}
-
 footer .row {
     margin-top: 0.5em;
     margin-bottom: 0.5em;
-}
-
-footer a, footer a:focus, footer a:active {
-    color: #E22B57;
-    -webkit-transition: all .1s linear;
-    -moz-transition: all .1s linear;
-    -o-transition: all .1s linear;
-    transition: all .1s linear;
-}
-
-footer a:hover {
-    color: #aa002d;
 }
 
 .panel-body {
@@ -102,7 +114,7 @@ footer a:hover {
 
 .social-icons > a {
     text-decoration: none;
-    padding: 0.5em;
+    padding-left: 0.5em;
     font-size: 100%;
     -webkit-transition: all .1s linear;
     -moz-transition: all .1s linear;
@@ -116,6 +128,10 @@ nav.navbar {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.table {
+    margin-bottom: 0;
+}
+
 div.panel {
     -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -127,18 +143,31 @@ div.panel {
     z-index: 3;
 }
 
+div.panel-body form {
+    padding: 0 !important;
+}
+
+div.panel form {
+    padding: 0 2em 2em 2em;
+}
+
 .confirm-content {
     margin-top: 70px
 }
 
+.content {
+  margin-top: 6em;
+  margin-bottom: 8.5em;
+}
+
 .margin-top {
-    margin-top: 6em;
-    margin-bottom: 1.5em;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .margin-top-adjusted {
-    margin-top: 3.3em;
-    margin-bottom: 0.1em;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 a.icon {
@@ -209,17 +238,17 @@ img.icon {
 }
 
 .alert-danger {
-    background: #EF4637;
+    background: #E22B57;
     color: #FBFBFB;
 }
 
 .alert-success {
-    background: #57AB5A;
+    background: #11AFC9;
     color: #FBFBFB;
 }
 
 .alert-warning {
-    background: #f0ad4e;
+    background: #E22B57;
     color: #FBFBFB;
 }
 
