--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -82,7 +82,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand white-text" href="/">{{ h_app_name }}</a>
+                <a class="navbar-brand white-text" href="/"><img src="{% static 'img/logo.png' %}" /></a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
@@ -153,7 +153,7 @@
             <div class="social-icons col-sm-6 text-right text-center-xs">
                 {% if h_me %}
                     <a class="btns" target="_blank" href="https://medium.com/@{{ h_me }}">
-                        <i aria-hidden="true" class="fa fa-twitter fa-medium"></i>
+                        <i aria-hidden="true" class="fa fa-medium fa-lg"></i>
                     </a>
                 {% endif %}
                 {% if h_repo %}
@@ -161,9 +161,19 @@
                         <i aria-hidden="true" class="fa fa-github fa-lg"></i>
                     </a>
                 {% endif %}
+                {% if h_ig %}
+                    <a class="btns" target="_blank" href="https://instagram.com/{{ h_ig }}">
+                        <i aria-hidden="true" class="fa fa-instagram fa-lg"></i>
+                    </a>
+                {% endif %}
                 {% if h_fb %}
                     <a class="btns" target="_blank" href="https://fb.com/{{ h_fb }}">
                         <i aria-hidden="true" class="fa fa-facebook fa-lg"></i>
+                    </a>
+                {% endif %}
+                {% if h_yt %}
+                    <a class="btns" target="_blank" href="https://youtube.com/channel/{{ h_yt }}">
+                        <i aria-hidden="true" class="fa fa-youtube fa-lg"></i>
                     </a>
                 {% endif %}
                 {% if h_tw %}
