--- a/app/templates/mails/include/email_button.html
+++ b/app/templates/mails/include/email_button.html
@@ -9,9 +9,9 @@
                    style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;width:100%;width:auto;">
                 <tbody>
                 <tr>
-                    <td style="font-family:sans-serif;font-size:14px;vertical-align:top;background-color:#ffffff;border-radius:5px;text-align:center; margin: 0 auto;background-color:#3498db;">
+                    <td style="font-family:sans-serif;font-size:14px;vertical-align:top;background-color:#ffffff;border-radius:5px;text-align:center; margin: 0 auto;background-color:#E22B57;">
                         <a href="{{ url }}" target="_blank"
-                           style="text-decoration:underline;background-color:#ffffff;border:solid 1px #3498db;border-radius:5px;box-sizing:border-box;color:#3498db;cursor:pointer;display:inline-block;font-size:14px;font-weight:bold;margin:0;padding:12px 25px;text-decoration:none;text-transform:capitalize;background-color:#3498db;border-color:#3498db;color:#ffffff;">
+                           style="text-decoration:underline;background-color:#ffffff;border:solid 1px #E22B57;border-radius:5px;box-sizing:border-box;color:#E22B57;cursor:pointer;display:inline-block;font-size:14px;font-weight:bold;margin:0;padding:12px 25px;text-decoration:none;text-transform:capitalize;background-color:#E22B57;border-color:#E22B57;color:#ffffff;">
                             {{ text }}
                         </a>
                     </td>
