--- a/user/templates/mails/password_reset_message.html
+++ b/user/templates/mails/password_reset_message.html
@@ -2,8 +2,8 @@
 {% block preheader %}Password reset{% endblock %}
 {% block content %}
     <p>
-        To initiate the password reset process for your {{ user.get_full_name }} {{ h_name }} Account,
-        click below:
+        To initiate the password reset process for your {{ user.get_full_name }} {{ h_name }} account,
+        click below.
     </p>
 
     {% include 'mails/include/email_button.html' with url=reset_url text='Reset password' %}
