--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -237,7 +237,7 @@
                                                              border="0"
                                                              height="20" width="20"
                                                              style="height: 20px; width: 20px; border:none; font-family: Helvetica, arial, sans-serif;"
-                                                             src="https://imgur.com/4hzPSg1"
+                                                             src="https://imgur.com/4hzPSg1.png"
                                                         />
                                                     </a>
                                                 </td>
