Privacy and Cookies Policy

--- a/app/templates/privacy_and_cookies.html
+++ b/app/templates/privacy_and_cookies.html
@@ -189,7 +189,7 @@
     <ul style="padding-left: 1em;">
       <li><a href="https://www.google.es/intl/es/policies/technologies/types/" target="_blank">https://www.google.es/intl/es/policies/technologies/types/</a>.</li>
       <li><a href="https://www.google.es/policies/technologies/ads/" target="_blank">https://www.google.es/policies/technologies/ads/</a>.</li>
-      <li><a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage" target="_blank"></a>https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage.</li>
+      <li><a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage" target="_blank">https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage</a>.</li>
     </ul>
     <p>If you choose to disable cookies, we may not be able to offer you some of our services.</p>
     
