All legal documents checked

--- a/app/templates/privacy_and_cookies.html
+++ b/app/templates/privacy_and_cookies.html
@@ -12,12 +12,12 @@
     
     <hr>
     <h3>1.DATA CONTROLLER</h3>
-    <p>ASSOCIACIÓ HACKERS AT UPC (hereinafter, “HACKERS AT UPC”) with NIF/VAT G66642778 and address at C/ Jordi Girona, num. 1, Campus Nord UPC, Edifici Omega, D.S103, 08034, Barcelona (Spain) is the Data Controller of the processing of your personal data.</p>
+    <p>ASSOCIACIÓ HACKERS AT UPC (hereinafter, “HACKERS AT UPC”) with NIF/VAT G66642778 and address at C/ Jordi Girona, num. 1-3, Campus Nord UPC, Edifici Omega, D.S103, 08034, Barcelona (Spain) is the Data Controller of the processing of your personal data.</p>
     <p>You may contact HACKERS AT UPC in the postal address previously indicated or in the following email address for any query, request or clarification regarding the processing of your personal data: <a href="mailto:contact@hackupc.com" target="_blank">contact@hackupc.com</a>.</p>
     
     <hr>
     <h3>2.WHAT PERSONAL DATA WE PROCESS AND HOW WE HAVE OBTAINED IT</h3>
-    <p>HACKERS AT UPC shall process the following personal data: (i) Any initial data that you voluntarily provide related to a request to register as a participant, information requests made to our company, requests to take part in promotions or requests to receive any of the services offered by HACKERS AUPC (We shall give clear, precise instructions of the mandatory data you must provide on each form), (ii) any data that are subsequently generated or exchanged with Users in order for HACKERS AT UPC to fulfil your initial request and (iii) any personal data that you provide through social media in order to handle your requests. These data shall depend on the privacy settings of each participant, the use made by each participant of social media, in addition to the privacy polices of the social media in question.</p>
+    <p>HACKERS AT UPC shall process the following personal data: (i) Any initial data that you voluntarily provide related to a request to register as a participant, information requests made to our company, requests to take part in promotions or requests to receive any of the services offered by HACKERS AUPC (We shall give clear, precise instructions of the mandatory data you must provide on each form), (ii) any data that are subsequently generated or exchanged with Users in order for HACKERS AT UPC to fulfil your initial request and (iii) any personal data that you provide through social media in order to handle your requests. These data shall depend on the privacy settings of each participant, the use made by each participant of social media, in addition to the privacy policies of the social media in question.</p>
     <p>Here are the details of which personal data is collected when you subscribe to be the first to know when applications open:</p>
     <ul style="padding-left: 1em;">
       <li>Contact data: E-mail.</li>
@@ -36,8 +36,10 @@
     <ul style="padding-left: 1em;">
       <li>Identifying data: Name, surname/s and images or videos of yourself.</li>
       <li>Contact data: E-mail and phone number.</li>
-      <li>Data on personal characteristics: Sex.</li>
+      <li>Data on personal characteristics: Sex, if you are a minor, t-shirt size.</li>
       <li>Academic and professional data: University, current studies and previous experience.</li>
+      <li>Health data: Food allergies and intolerances.</li>
+      <li>Other information: Dietary preferences.</li>
     </ul>
     <p>Here are the details of which personal data is collected when you register as an Organizer:</p>
     <ul style="padding-left: 1em;">
@@ -48,6 +50,7 @@
       <li>Economic and financial data: Bank account.</li>
       <li>Health data: Food allergies and intolerances.</li>
       <li>Other information: Dietary preferences.</li>
+      <li>Academic Data and professional data: Current studies, year of studies, link to professional profiles online (GitHub, LinkedIn).</li>
     </ul>
     <p>Here are the details of which personal data is collected when you register as a Judge or a Mentor:</p>
     <ul style="padding-left: 1em;">
@@ -94,7 +97,7 @@
     <p>Regarding the images and videos of yourself:</p>
     <ul style="padding-left: 1em;">
       <li>HACKERS AT UPC shall process your personal data to display, broadcast and/or publish it by HACKERS AT UPC for advertising purposes through any audiovisual and/or written media (TV, press, internet, social networks, etc.) and in any advertising and media support (brochures, banners, panels, website, memory of activities, publications, reports, etc.).</li>
-      <li>In case you expressly consent, HACKERS AT UPC shall process your personal data to display, broadcast and/or publish it by the Sponsors of the event you request to participate in and the MAJOR LEAGUE HACKING (MLH) for advertising purposes through any audiovisual and/or written media (TV, press, internet, social networks, etc.) and in any advertising and media support (brochures, banners, panels, website, memory of activities, publications, reports, etc.).</li>
+      <li>In case you expressly consent, HACKERS AT UPC shall process your personal data to display, broadcast and/or publish it by the Sponsors of the event you request to participate in for advertising purposes through any audiovisual and/or written media (TV, press, internet, social networks, etc.) and in any advertising and media support (brochures, banners, panels, website, memory of activities, publications, reports, etc.).</li>
     </ul>
     <p>Regarding food allergies and intolerances:</p>
     <ul style="padding-left: 1em;">
@@ -134,7 +137,7 @@
       <li>Accounting audit firms: to comply with the legal obligations of auditing accounts to which HACKERS AT UPC is subject due to its activity.</li>
       <li>Law Enforcement: when our organization is required to provide information in compliance with a legal obligation.</li>
       <li>Providers who require access to your personal data in order to provide the services that HACKERS AT UPC has hired from them, and with whom HACKERS AT UPC has subscribed confidentiality and data processing agreements that are necessary and mandatory by the privacy protection regulation.</li>
-      <li>In the event that you expressly consent, HACKERS AT UPC will transfer the images and videos captured of yourself to the Sponsors of the event you request to participate in and the MAJOR LEAGUE HACKING (MLH) for advertising purposes. HACKERS at UPC will be able to transfer your data due to the fact that you have given your consent.</li>
+      <li>In the event that you expressly consent, HACKERS AT UPC will transfer the images and videos captured of yourself to the Sponsors of the event you request to participate in for advertising purposes. HACKERS at UPC will be able to transfer your data due to the fact that you have given your consent.</li>
       <li>In the event that you request it, we will share the personal data in your CV, with the Sponsors participating at the specific event organized by HACKERS AT UPC in which you request to participate in. HACKERS at UPC will be able to transfer your data due to the fact that you have given your consent.</li>
     </ul>
     <p>You will be duly informed if HACKERS AT UPC transfers personal data to other addressees in the future.</p>
@@ -142,7 +145,6 @@
     <hr>
     <h3>6.INTERNATIONAL DATA TRANSFERS</h3>
     <p>HACKERS AT UPC has hired technology service providers located in countries that do not have a data protection regulation equivalent to the European (“Third Countries”). These service providers have signed the confidentiality and data processing agreements required by the regulation, which apply the warranties and safeguards needed to preserve your privacy.</p>
-    <p>We inform you that, in case you expressly consent, the MAJOR LEAGUE HACKING (MLH) will receive some of your personal data (images and videos of yourself) which means that there will be an international data transfer due to the fact that MLH is located in the USA.</p>
     <p>For further information regarding warranties to your privacy, you may contact HACKERS AT UPC at the electronic or postal addresses previously indicated.</p>
     
     <hr>
