--- a/app/templates/terms_and_conditions.html
+++ b/app/templates/terms_and_conditions.html
@@ -176,8 +176,8 @@
     <p>In accordance with the current data protection legislation, particularly the Regulation (EU) 2016/679 of The European Parliament and of The Council, of 27 April, on the protection of natural persons with regard to the processing of personal data and on the free movement of such data, all personal data collected during the use of the Website will be processed in accordance with the provisions of the <a href="my.hackupc.com/privacy_and_cookies/" target="_blank">Privacy and Cookies Policy</a> which all Users must expressly accept.</p>
     <p>As it is explained in the Privacy Policy, one of the personal data that you authorize HACKERS AT UPC to process is your image:</p>
     <ul style="padding-left: 1em;">
-      <li>By accepting the Privacy Policy and these T&C you grant HACKERS AT UPC, its directors, officers, employees, agents and Sponsors permission to capture photographs and/or record videos of yourself in the event you request to participate. You also grant HACKERS AT UPC permission to provide those pictures and/or videos to MAJOR LEAGUE HACKING (MLH).</li>
-      <li>You give your consent for the images and/or videos taken during the course of this event to be displayed, broadcasted and/or published by HACKERS AT UPC and/or the Sponsors of the event you request to participate and/or MAJOR LEAGUE HACKING (MLH) for advertising purposes through any audiovisual and/or written media (TV, press, internet, social networks, etc.) and in any advertising and media support (brochures, banners, panels, website, memory of activities, publications, reports, etc.), worldwide, for an indefinite period and without limitation.</li>
+      <li>By accepting the Privacy Policy and these T&C you grant HACKERS AT UPC, its directors, officers, employees, agents and Sponsors permission to capture photographs and/or record videos of yourself in the event you request to participate. You also grant HACKERS AT UPC permission to provide those pictures and/or videos.</li>
+      <li>You give your consent for the images and/or videos taken during the course of this event to be displayed, broadcasted and/or published by HACKERS AT UPC and/or the Sponsors of the event you request to participate for advertising purposes through any audiovisual and/or written media (TV, press, internet, social networks, etc.) and in any advertising and media support (brochures, banners, panels, website, memory of activities, publications, reports, etc.), worldwide, for an indefinite period and without limitation.</li>
       <li>This authorization is perpetual and has no other limitations than those contained in the Spanish Organic Law 1/1982, of May 5, on Civil Protection of the right to honor, personal and family privacy and self-image.</li>
       <li>This authorization is made completely free of charge, and you undertake not to request or claim any compensation, payment or reimbursement in exchange for this authorization.</li>
     </ul>
@@ -217,7 +217,7 @@
     <p>The Participant or Attendee shall not assign, sublicense, delegate or otherwise transfer any of its rights or obligations.</p>
     
     <h4><strong>Notices</strong></h4>
-    <p>All notices and other communications hereunder shall be in writing and shall be deemed to have been duly given when delivered in person (including by internationally recognized commercial delivery service), and on the day the notice is sent when sent by email with confirmation receipt, if the time of transmission is during recipient’s business day, or if not on the next business day thereafter, in each case to the respective parties at the postal or email addresses provided by the them in writing.</p>
+    <p>All notices and other communications hereunder shall be in writing and shall be deemed to have been duly given when delivered in person (including by internationally recognized commercial delivery service), and on the day the notice is sent when sent by email with confirmation receipt, if the time of transmission is during recipient’s business day, or if not on the next business day thereafter, in each case to the respective parties at the postal or email addresses provided by them in writing.</p>
     <p>Either party may change its address by providing the other party with written notice of the change in accordance with this section.</p>
     
     <h4><strong>Relationship of Parties</strong></h4>
@@ -239,5 +239,5 @@
     <p>This Agreement shall be binding upon and inure solely to the benefit of the parties hereto and their permitted assigns and nothing herein, express or implied, is intended to or shall confer upon any other person any legal or equitable right, benefit or remedy of any nature whatsoever under or by reason of this Agreement.”</p>
     
     <hr>
-    <p>Last Reviewed: July 7, 2018.</p>
+    <p>Last Reviewed: July 11, 2018.</p>
 {% endblock %}
